improving the analysis organization

--- a/geolocation_scripts/geolocation.ipynb
+++ b/geolocation_scripts/geolocation.ipynb
@@ -11,7 +11,9 @@
     "from urllib.parse import urlencode\n",
     "import numpy as np\n",
     "\n",
-    "df=pd.read_csv('zoopla_edinburgh_with_geoloc.csv')"
+    "#Here goes the file address with info for geocoding\n",
+    "geolocation_file_address=''\n",
+    "df=pd.read_csv(geolocation_file_address)"
    ]
   },
   {
